ecs.tf
# # ecs.tf


################################################################################################
# USE THE CODE BELOW TO ATTACH PROFILE TO EC2 instances

# resource "aws_instance" "role-test" {
#   ami = "ami-0bbe6b35405ecebdb"
#   instance_type = "t2.micro"
#   iam_instance_profile = "${aws_iam_instance_profile.test_profile.name}"
#   key_name = "mytestpubkey"
# }

################################################################################################

# resource "aws_ecs_cluster" "main" {
#   name = "cb-cluster"
# }

# data "template_file" "cb_app" {
#   template = file("./templates/ecs/cb_app.json.tpl")

#   vars = {
#     app_image      = var.app_image
#     app_port       = var.app_port
#     fargate_cpu    = var.fargate_cpu
#     fargate_memory = var.fargate_memory
#     aws_region     = var.aws_region
#   }
# }

# resource "aws_ecs_task_definition" "app" {
#   family                   = "cb-app-task"
#   execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn
#   network_mode             = "awsvpc"
#   requires_compatibilities = ["FARGATE"]
#   cpu                      = var.fargate_cpu
#   memory                   = var.fargate_memory
#   container_definitions    = data.template_file.cb_app.rendered
# }

# resource "aws_ecs_service" "main" {
#   name            = "cb-service"
#   cluster         = aws_ecs_cluster.main.id
#   task_definition = aws_ecs_task_definition.app.arn
#   desired_count   = var.app_count
#   launch_type     = "FARGATE"

#   network_configuration {
#     security_groups  = [aws_security_group.ecs_tasks.id]
#     subnets          = [var.aws_subnet_private_id, var.aws_subnet_private_id_2]
#     assign_public_ip = true
#   }

#   load_balancer {
#     target_group_arn = aws_alb_target_group.app.id
#     container_name   = "cb-app"
#     container_port   = var.app_port
#   }

#   depends_on = [aws_alb_listener.front_end, aws_iam_role_policy_attachment.ecs_task_execution_role]
# }
